Fixed page bugs across HTML and CSS
- Fixed index.html title from placeholder "My Webpage" to "Tom Childs"
- Fixed missing </article> close tag in code.html #neuroanatomy section
- Fixed broken script paths in blog posts (assets/js/ -> ../assets/js/)
- Added missing label span and removed truncated &hl from Google Scholar
  links in cv.html and code.html for screen-reader accessibility
- Fixed "Costa, Rica 2015" -> "Costa Rica, 2015" in photos.html (x6)
- Fixed "Galways" -> "Galway" typo in photos.html
- Fixed duplicate @media (max-width: 480px) block for #footer in
  photos-page main.css; second block now correctly targets 360px

--- a/assets/photos-page/css/main.css
+++ b/assets/photos-page/css/main.css
@@ -2125,19 +2125,19 @@ input, select, textarea {
 			}
 	
 			@media screen and (max-width: 480px) {
-	
+
 				#footer {
 					padding: 3em 1.5em 1em 1.5em ;
 				}
-	
+
 			}
-	
-			@media screen and (max-width: 480px) {
-	
+
+			@media screen and (max-width: 360px) {
+
 				#footer {
 					padding: 2.5em 1em 0.5em 1em ;
 				}
-	
+
 			}
 
 /* Menu Toggle Button */
